[gd_scene load_steps=4 format=1]

[ext_resource path="res://main_menu/menu_background.png" type="Texture" id=1]
[ext_resource path="res://main_menu/main_menu.gd" type="Script" id=2]
[ext_resource path="res://themes/main_menu.xthm" type="Theme" id=3]

[node name="Main Menu" type="TextureFrame"]

process/pause_mode = 2
anchor/right = 1
anchor/bottom = 1
margin/top = 2.0
margin/bottom = -2.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
texture = ExtResource( 1 )
expand = true
script/script = ExtResource( 2 )
__meta__ = { "__editor_plugin_screen__":"2D" }

[node name="Menu" type="VBoxContainer" parent="."]

anchor/right = 1
anchor/bottom = 1
margin/left = 697.0
margin/top = 448.0
margin/right = 697.0
margin/bottom = 190.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
alignment = 0

[node name="New" type="Button" parent="Menu"]

margin/right = 526.0
margin/bottom = 36.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
text = "New Game"
flat = false

[node name="Continue" type="Button" parent="Menu"]

visibility/visible = false
margin/top = 100.0
margin/right = 526.0
margin/bottom = 136.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
text = "Continue"
flat = false

[node name="Save" type="Button" parent="Menu"]

visibility/visible = false
margin/top = 100.0
margin/right = 526.0
margin/bottom = 136.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
text = "Save Game"
flat = false

[node name="Load" type="Button" parent="Menu"]

margin/top = 100.0
margin/right = 526.0
margin/bottom = 136.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
text = "Load Game"
flat = false

[node name="About" type="Button" parent="Menu"]

margin/top = 200.0
margin/right = 526.0
margin/bottom = 236.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
text = "About/How To Play"
flat = false

[node name="Quit" type="Button" parent="Menu"]

margin/top = 300.0
margin/right = 526.0
margin/bottom = 336.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
text = "Quit"
flat = false

[connection signal="pressed" from="Menu/New" to="." method="_on_New_pressed"]

[connection signal="pressed" from="Menu/Continue" to="." method="_on_Continue_pressed"]

[connection signal="pressed" from="Menu/Save" to="." method="_on_Save_pressed"]

[connection signal="pressed" from="Menu/Load" to="." method="_on_Load_pressed"]

[connection signal="pressed" from="Menu/About" to="." method="_on_About_pressed"]

[connection signal="pressed" from="Menu/Quit" to="." method="_on_Quit_pressed"]


